--- a/style1.css
+++ b/style1.css
@@ -1,8 +1,11 @@
+* {
+    color: seashell;
+}
+
 body {
     background-color: black;
     margin: 25px auto;
     max-width: 1200px;
-    color: seashell;
     text-align: center;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -24,15 +27,19 @@ nav a {
     border: 2px solid;
     border-radius: 25px;
     box-shadow: 0px 0px 0px;
-    margin-top: 50px;
+    font-weight: bold; /* Match the text weight */
 }
 
 div {
     border: solid;
     border-radius: 50px;
     padding: 50px;
-    margin: 60px auto 10px; /* Added more top margin to move the div down */
-    max-width: 800px;
+    margin: 30px auto 10px; /* Added more top margin to move the div down */
+    max-width: 800px; 
+}
+
+body {
+    padding-top: 100px; /* Added padding to the top of the body */
 }
 
 ol {
@@ -51,3 +58,9 @@ ol {
     left: 50%; /* Center the navigation bar */
     transform: translateX(-50%); /* Center the navigation bar */
 }
+ #welsome {
+    font-size: 50px;
+    font-weight: bold;
+    color: seashell;
+    text-shadow: 0px 0px 0px darkgreen;
+ }
