--- a/Kamen/ver2/style.css
+++ b/Kamen/ver2/style.css
@@ -197,6 +197,13 @@ footer {
   height: auto;
   border-radius: 10px;
 }
+
+#mtb {
+  width: 120%;
+  height: auto;
+  border-radius: 10px;
+}
+
 form {
   margin: auto; /* Center the form horizontally and vertically */
   border: 3px solid #f1f1f1;
