--- a/ver2/style.css
+++ b/ver2/style.css
@@ -173,6 +173,7 @@ footer {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
+  font-size: 25px;
 }
 
 .left-column a {
